# kp-codeagent

./: ALTERNATIVAS_OLLAMA.md  DOCUMENTACION_ACTUALIZADA.md  GUIA_GROQ.md  GUIA_INSTALACION_OLLAMA_WINDOWS.md  IMPLEMENTACION_GROQ.md  MEJORAS_REALIZADAS.md  README.md  REORGANIZACION_COMPLETADA.md  demo_sin_ia.py  diagnostico_ollama.md  test_groq.py  test_groq_simple.sh  test_ollama.py  test_ollama_detallado.sh  test_ollama_windows.ps1
kp-codeagent/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  README_ES.md  pyproject.toml  requirements.txt  setup.py
kp-codeagent/installer/: install.bat  install.sh
kp-codeagent/kp_codeagent/: __init__.py  agent.py  cli.py  context_builder.py  file_handler.py  i18n.py  llm_client.py  ollama_client.py  prompts.py  utils.py
kp-codeagent/kp_codeagent/translations/: en.json  es.json
kp-codeagent/tests/: __init__.py  test_basic.py
proyecto/: hola.py  test_hola.py
