[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kp-codeagent"
version = "0.1.0"
description = "A local AI coding assistant for students using CodeLlama"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "KP Code Agent Team"}
]
keywords = ["ai", "coding-assistant", "education", "ollama", "codellama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rich>=13.0.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
kp-codeagent = "kp_codeagent.cli:main"

[project.urls]
Homepage = "https://github.com/kp-codeagent/kp-codeagent"
Documentation = "https://github.com/kp-codeagent/kp-codeagent#readme"
Repository = "https://github.com/kp-codeagent/kp-codeagent"
Issues = "https://github.com/kp-codeagent/kp-codeagent/issues"

[tool.setuptools]
packages = ["kp_codeagent"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
